--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -30,6 +31,7 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+    buildFeatures.viewBinding = true
 }
 
 dependencies {
