--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 def arch_version = "2.1.0"
 def lifecycle_version = "2.9.0"
 def activity_version = "1.10.0"
+def recyclerview_version = "1.1.0"
 
 dependencies {
     implementation libs.androidx.core.ktx
@@ -55,4 +56,5 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
     testImplementation "androidx.arch.core:core-testing:$arch_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 }
