--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,11 @@ android {
     buildFeatures.viewBinding = true
 }
 
-def arch_version = "2.1.0"
+def arch_version = "2.2.0"
 def lifecycle_version = "2.9.0"
 def activity_version = "1.10.0"
 def recyclerview_version = "1.1.0"
+def mdc_version = "1.3.0"
 
 dependencies {
     implementation libs.androidx.core.ktx
@@ -52,9 +53,10 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.activity:activity-ktx:$activity_version"
-    testImplementation "androidx.arch.core:core-testing:$arch_version"
-    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation libs.androidx.lifecycle.viewmodel.ktx
+    implementation libs.androidx.lifecycle.livedata.ktx
+    implementation libs.androidx.activity.ktx
+    testImplementation libs.androidx.core.testing
+    implementation libs.androidx.recyclerview
+    implementation libs.material
 }
